[package]
name = "systemprompt-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Profile-based configuration for systemprompt.io AI governance infrastructure. Bootstraps profiles, secrets, and credentials with zero environment-variable fallback."
readme = "README.md"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Core runtime
tracing = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
schemars = { workspace = true }

# Utilities
regex = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }

# systemprompt.io dependencies
systemprompt-identifiers = { workspace = true }
systemprompt-logging = { workspace = true, features = ["cli"] }
systemprompt-models = { workspace = true }
systemprompt-traits = { workspace = true }
