[package]
name = "systemprompt-database"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Database abstraction layer for systemprompt.io supporting SQLite, PostgreSQL, and MySQL"
keywords = ["database", "abstraction", "sqlx", "repository", "pattern"]
categories = ["database"]
documentation = "https://docs.rs/systemprompt-database"

[lints]
workspace = true

[dependencies]
# Core dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }

# Database
sqlx = { workspace = true, features = ["postgres", "uuid"] }

# systemprompt.io dependencies
systemprompt-traits = { path = "../../shared/traits", version = "0.0.9" }
systemprompt-identifiers = { path = "../../shared/identifiers", version = "0.0.9", features = ["sqlx"] }
systemprompt-models = { path = "../../shared/models", version = "0.0.9" }
systemprompt-extension = { path = "../../shared/extension", version = "0.0.9" }

# Utilities
chrono = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
rust_decimal = { workspace = true }

# Extension registration
inventory = { workspace = true }

# Optional API dependencies
axum = { workspace = true, optional = true }

[features]
default = []
api = ["axum"]