[package]
name = "systemprompt-database"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "SQLx-backed PostgreSQL pool and generic repository traits with compile-time query verification — part of the systemprompt.io AI governance infrastructure."
keywords = ["database", "abstraction", "sqlx", "repository", "pattern"]
categories = ["database"]
documentation = "https://docs.rs/systemprompt-database"
include = ["src/**/*", "schema/**/*", "Cargo.toml", "README.md", "CHANGELOG.md", ".sqlx/**/*"]

[lints]
workspace = true

[dependencies]
# Core dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }

# Database
sqlx = { workspace = true, features = ["postgres", "uuid"] }

# systemprompt.io dependencies
systemprompt-traits = { workspace = true }
systemprompt-identifiers = { workspace = true, features = ["sqlx"] }
systemprompt-models = { workspace = true }
systemprompt-extension = { workspace = true }

# Utilities
chrono = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
rust_decimal = { workspace = true }

# Extension registration
inventory = { workspace = true }

# Optional API dependencies
axum = { workspace = true, optional = true }

[features]
default = []
api = ["axum"]
