[package]
name = "systemprompt-events"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Event bus, SSE broadcasters (A2A, analytics, context) and fan-out routing — part of the systemprompt.io AI governance infrastructure."

[lints]
workspace = true

[dependencies]
# Core runtime
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

# Web framework
axum = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
once_cell = { workspace = true }

# systemprompt.io dependencies
systemprompt-identifiers = { workspace = true }
systemprompt-models = { workspace = true }

[dev-dependencies]
