[package]
name = "systemprompt-events"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Event bus, SSE broadcasters, and fan-out routing for systemprompt.io AI governance infrastructure. A2A, analytics, and context stream wiring for the MCP governance pipeline."
readme = "README.md"

[lints]
workspace = true

[dependencies]
# Core runtime
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

# Web framework
axum = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
once_cell = { workspace = true }

# systemprompt.io dependencies
systemprompt-identifiers = { workspace = true }
systemprompt-models = { workspace = true }

[dev-dependencies]
