[package]
name = "systemprompt-events"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Event bus, SSE broadcasters, and fan-out routing for systemprompt.io AI governance infrastructure. A2A, analytics, and context stream wiring for the MCP governance pipeline."
readme = "README.md"
include = ["src/**/*", "schema/**/*", "build.rs", "Cargo.toml", "README.md", "CHANGELOG.md", ".sqlx/**/*"]

[lints]
workspace = true

[build-dependencies]
systemprompt-extension = { workspace = true }

[dependencies]
# Core runtime
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

# Web framework
axum = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database — durable cross-replica relay via Postgres LISTEN/NOTIFY
sqlx = { workspace = true }
chrono = { workspace = true }

# systemprompt.io dependencies
systemprompt-extension = { workspace = true }
inventory = { workspace = true }
systemprompt-identifiers = { workspace = true }
systemprompt-models = { workspace = true }

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
