[package]
name = "systemprompt-loader"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "File and module discovery infrastructure separating I/O from shared models — part of the systemprompt.io AI governance infrastructure."

[lints]
workspace = true

[dependencies]
# Core runtime
anyhow = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Async
tokio = { workspace = true }

# systemprompt.io dependencies
systemprompt-extension = { workspace = true }
systemprompt-models = { workspace = true }

