[package]
name = "systemprompt-loader"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "File and module discovery infrastructure for systemprompt.io AI governance — manifests, schemas, and extension loading. Separates I/O from shared models in the MCP governance pipeline."
readme = "README.md"

[lints]
workspace = true

[dependencies]
# Core runtime
anyhow = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Async
tokio = { workspace = true }

# systemprompt.io dependencies
systemprompt-extension = { workspace = true }
systemprompt-models = { workspace = true }

