[package]
name = "systemprompt-loader"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "File and module discovery infrastructure for systemprompt.io AI governance — manifests, schemas, and extension loading. Separates I/O from shared models in the MCP governance pipeline."
readme = "README.md"

[lints]
workspace = true

[dependencies]
# Core runtime
tracing = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Async
tokio = { workspace = true }

# systemprompt.io dependencies
systemprompt-config = { workspace = true }
systemprompt-extension = { workspace = true }
systemprompt-identifiers = { workspace = true }
systemprompt-models = { workspace = true }

[features]
default = []
# Exposes test-only entry points (e.g. `ConfigLoader::load_from_content`)
# to dependent crates that exercise the loader from outside `cfg(test)`.
expose-internals = []

[package.metadata.docs.rs]
all-features = true
