[package]
name = "systemprompt-logging"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core logging module for systemprompt.io OS"

[lints]
workspace = true

[dependencies]
# Core dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
tokio-cron-scheduler = { workspace = true }

# Database
sqlx = { workspace = true }

# UUID for log entry IDs
uuid = { workspace = true }

# CLI formatting and display
colored = { workspace = true }
console = { workspace = true }
dialoguer = { workspace = true }
indicatif = { workspace = true }

# Core libs
systemprompt-database = { path = "../database", version = "0.0.2" }
systemprompt-extension = { path = "../../shared/extension", version = "0.0.2" }
systemprompt-identifiers = { path = "../../shared/identifiers", version = "0.0.2" }
systemprompt-traits = { path = "../../shared/traits", version = "0.0.2" }

# Traits
async-trait = { workspace = true }
thiserror = { workspace = true }
inventory = { workspace = true }

# Validation
validator = { workspace = true }

# Web interface dependencies
axum = { workspace = true }

[features]
default = ["web"]
web = []