[package]
name = "systemprompt-logging"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Tracing and audit infrastructure for systemprompt.io AI governance. Structured events, five-point audit traces, and SIEM-ready JSON output — part of the MCP governance pipeline."
readme = "README.md"
include = ["src/**/*", "schema/**/*", "Cargo.toml", "README.md", "CHANGELOG.md", ".sqlx/**/*"]

[lints]
workspace = true

[dependencies]
# Core dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
tokio-cron-scheduler = { workspace = true }

# Database
sqlx = { workspace = true }

# UUID for log entry IDs
uuid = { workspace = true }

# CLI formatting and display (optional, enabled by "cli" feature)
colored = { workspace = true, optional = true }
console = { workspace = true, optional = true }
dialoguer = { workspace = true, optional = true }
indicatif = { workspace = true, optional = true }

# Core libs
systemprompt-database = { workspace = true }
systemprompt-extension = { workspace = true }
systemprompt-identifiers = { workspace = true }
systemprompt-models = { workspace = true }
systemprompt-traits = { workspace = true }

# Traits
async-trait = { workspace = true }
thiserror = { workspace = true }
inventory = { workspace = true }

# Validation
validator = { workspace = true }

# Web interface dependencies
axum = { workspace = true }

[features]
default = []
cli = ["dep:colored", "dep:console", "dep:dialoguer", "dep:indicatif"]
