[package]
name = "systemprompt-security"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Security module for systemprompt.io - authentication, authorization, JWT, and token extraction"

[lints]
workspace = true

[dependencies]
# Core runtime
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

# Web framework
axum = { workspace = true }

# Security
uuid = { workspace = true }
jsonwebtoken = { workspace = true }
chrono = { workspace = true }

# systemprompt.io dependencies
systemprompt-models = { workspace = true }
systemprompt-identifiers = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
