[package]
name = "systemprompt-security"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Security infrastructure for systemprompt.io AI governance: JWT, OAuth2 token extraction, scope enforcement, ChaCha20-Poly1305 secret encryption, and the four-layer tool-call governance pipeline."
readme = "README.md"

[lints]
workspace = true

[dependencies]
# Core runtime
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

# Web framework
axum = { workspace = true }

# Security
uuid = { workspace = true }
jsonwebtoken = { workspace = true }
chrono = { workspace = true }

# Signed-manifest crypto (cowork)
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
sha2 = { workspace = true }
base64 = { workspace = true }
serde_jcs = "0.1"

# systemprompt.io dependencies
systemprompt-models = { workspace = true }
systemprompt-identifiers = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
