[package]
name = "systemprompt-security"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Security infrastructure for systemprompt.io AI governance: JWT, OAuth2 token extraction, scope enforcement, ChaCha20-Poly1305 secret encryption, the four-layer tool-call governance pipeline, and the unified authz decision plane (deny-overrides resolver + AuthzDecisionHook) shared by gateway and MCP enforcement."
readme = "README.md"
include = ["src/**/*", "schema/**/*", "build.rs", "Cargo.toml", "README.md", ".sqlx/**/*"]

[features]
# Allow `http://` JWKS issuers. Test-only escape hatch so integration
# tests can stand up `wiremock` (which is HTTP-only) without standing
# up a TLS-terminating proxy. Must NEVER be enabled in production.
test-jwks-insecure-scheme = []

[lints]
workspace = true

[build-dependencies]
systemprompt-extension = { workspace = true }

[dependencies]
# Core runtime
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

# Web framework
axum = { workspace = true }

# Security
uuid = { workspace = true }
jsonwebtoken = { workspace = true }
chrono = { workspace = true }
rsa = { workspace = true }
pkcs8 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
lru = { workspace = true }
url = { workspace = true }

# Signed-manifest crypto (bridge)
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
base64 = { workspace = true }
serde = { workspace = true }
serde_jcs = "0.1"

# Authz module
inventory = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
metrics = { workspace = true }

# systemprompt.io dependencies
systemprompt-models = { workspace = true }
systemprompt-config = { workspace = true }
systemprompt-database = { workspace = true }
systemprompt-extension = { workspace = true }
systemprompt-identifiers = { workspace = true, features = ["sqlx"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = { workspace = true }

[package.metadata.docs.rs]
all-features = true
