[package]
name = "systemprompt-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "HTTP API client for CLIs and external services talking to a systemprompt.io deployment — part of the systemprompt.io AI governance infrastructure."

[lints]
workspace = true

[dependencies]
# HTTP client
reqwest = { workspace = true }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Shared types (no business logic dependencies)
systemprompt-models = { workspace = true }
systemprompt-identifiers = { workspace = true }
